# YandexHomeDesktop

./: .gitignore  CMakeLists.txt  README.md  index.html
.github/workflows/: build-linux.yml  build-windows.yml
installer/config/: config.xml
macos/: Info.plist
resources/: UserInfoTest.txt  YandexHomeDesktop.icns  resources.qrc
resources/auth/: README.md  app.rc
resources/callback/: index.html
resources/data/: colorModes.json  colors.json  deviceIcons.json  errorCodes.json  instances.json  instances2.json  modes.json  propertiesEvents.json  propertiesFloat.json  propertiesIcons.json  units.json
resources/shaders/: highlight.frag.qsb
resources/themes/: dark.json  dark2.json  light.json
scripts/: build-release.py  generate-secrets.py  iconset.sh  macos-build.sh  macos-dmg.sh  macos-installer.sh
src/: AppContext.h  Router.h  Themes.cpp  Themes.h  main.cpp
src/api/: CMakeLists.txt  Capability.h  CapabilityFactory.cpp  CapabilityFactory.h  Device.h  RequestFactory.cpp  RequestFactory.h  YandexAccount.cpp  YandexAccount.h  YandexHomeApi.cpp  YandexHomeApi.h
src/api/model/: Actions.h  Capabilites.h  Properties.h  Response.h  Status.h  UserInfo.h
src/app/: AppContext.cpp  AppContext.h  CliApp.cpp  CliApp.h  GuiApp.cpp  GuiApp.h
src/auth/: AuthorizationService.cpp  AuthorizationService.h  CMakeLists.txt  YandexAuth.cpp  YandexAuth.h
src/capabilities/: ColorSettingCapability.cpp  ColorSettingCapability.h  ICapability.cpp  ICapability.h  ModesCapability.cpp  ModesCapability.h  OnOffCapability.cpp  OnOffCapability.h  RangeCapability.cpp  RangeCapability.h  ToggleCapability.cpp  ToggleCapability.h
src/cli/: AccountInfoCommand.cpp  AccountInfoCommand.h  CLI.cpp  CLI.h  ICommand.h  IExecutor.cpp  IExecutor.h  ListDevicesCommand.cpp  ListDevicesCommand.h  OnOffExecutor.cpp  OnOffExecutor.h  ResetCommand.cpp  ResetCommand.h
src/iot/: CMakeLists.txt
src/iot/capabilities/: ColorSettingCapability.cpp  ColorSettingCapability.h  ModesCapability.cpp  ModesCapability.h  OnOffCapability.cpp  OnOffCapability.h  RangeCapability.cpp  RangeCapability.h  ToggleCapability.cpp  ToggleCapability.h
src/iot/common/: IotObject.cpp  IotObject.h  UnitObject.cpp  UnitObject.h
src/iot/properties/: EventProperty.cpp  EventProperty.h  FloatProperty.cpp  FloatProperty.h
src/macos/: Info.plist  MacOSIntegration.h  MacOSIntegration.mm
src/models/: CMakeLists.txt  ColorsFilterModel.cpp  ColorsFilterModel.h  ColorsModel.h  DeviceModel.cpp  DeviceModel.h  DevicesFilterModel.cpp  DevicesModel.cpp  ModesFilterModel.cpp  ModesFilterModel.h  ModesModel.cpp  ModesModel.h  RoomsFilterModel.cpp  RoomsFilterModel.h  RoomsModel.cpp  ScenariosModel.cpp  ScenariosModel.h
src/models/ColorsModel/: ColorModesFilterModel.cpp  ColorModesFilterModel.h  ColorModesModel.cpp  ColorModesModel.h  ColorsFilterModel.cpp  ColorsFilterModel.h  ColorsModel.cpp  ColorsModel.h
src/models/DeviceModel/: CapabilitiesModel.cpp  CapabilitiesModel.h  DeviceAttribute.cpp  DeviceAttribute.h  DeviceController.cpp  DeviceController.h  DeviceDataController.cpp  DeviceDataController.h  DeviceDataModel.cpp  DeviceDataModel.h  DeviceFilterModel.cpp  DeviceFilterModel.h  DeviceModel.cpp  DeviceModel.h  PropertiesModel.cpp  PropertiesModel.h
src/models/DevicesModel/: DevicesFilterModel.cpp  DevicesFilterModel.h  DevicesModel.cpp  DevicesModel.h
src/models/HouseholdsModel/: HouseholdsModel.cpp  HouseholdsModel.h
src/models/ModesModel/: ModesFilterModel.cpp  ModesFilterModel.h  ModesModel.cpp  ModesModel.h
src/models/RoomsModel/: RoomsFilterModel.cpp  RoomsModel.cpp  RoomsModel.h
src/models/ScenariosModel/: ScenariosModel.cpp  ScenariosModel.h
src/platform/: CMakeLists.txt  PlatformService.cpp  PlatformService.h  PlatformServiceFactory.h  PlatformServiceImpl.h  PlatformServiceLinux.cpp  PlatformServiceLinux.h  PlatformServiceMac.cpp  PlatformServiceMac.h  PlatformServiceWin.cpp  PlatformServiceWin.h
src/platform/macos/: Info.plist  MacOSIntegration.h  MacOSIntegration.mm
src/qml/: CMakeLists.txt  Main.qml  MyTab.qml  MyTabs.qml
src/qml/YandexHomeDesktop/Components/: CMakeLists.txt  RoomDevicesList.qml
src/qml/YandexHomeDesktop/Ui/: CMakeLists.txt  MyButton.qml  MyComboBox.qml
src/qml/components/: AccountDetails.qml  AdaptiveGrid.qml  DeviceDelegate.qml  RoomDevicesList.qml  ScenarioDelegate.qml  ScenariosList.qml  SelectDialog.qml  TopBar.qml
src/qml/controls/: ColorSetting.qml  Mode.qml  OnOff.qml  PropertyEvent.qml  PropertyFloat.qml  Range.qml  Toggle.qml  Unsupported.qml
src/qml/pages/: AuthCanceledPage.qml  AuthPage.qml  CMakeLists.txt  DevicePage.qml  DevicesPage.qml  ErrorPage.qml  LoadingPage.qml  MainPage.qml  ScenariosPage.qml  SettingsPage.qml
src/qml/shaders/: CMakeLists.txt  highlight.frag
src/qml/ui/: AnimatedText.qml  DefaultText.qml  ErrorDialog.qml  HeadingText.qml  ImageButton.qml  MyButton.qml  MyComboBox.qml  MyProgressIndicator.qml  MySlider.qml  MySwitch.qml  MyTab.qml  MyTabs.qml  SelectDialog.qml  Skeleton.qml  SubheadingText.qml
src/serialization/: Enumeration.h  Serialization.h
src/utils/: CMakeLists.txt  DevicesIcons.cpp  DevicesIcons.h  ErrorCodes.cpp  ErrorCodes.h  IconsProvider.cpp  IconsProvider.h  JsonLoader.cpp  JsonLoader.h  LogManager.cpp  LogManager.h  Router.cpp  Settings.cpp  Settings.h  Themes.cpp  Themes.h  TitlesList.cpp  TitlesList.h  TitlesProvider.cpp  TitlesProvider.h  UnitsList.cpp  UnitsList.h
tests/: ApiTests.cpp  ApiTests.h  CMakeLists.txt  CapabilitiesTests.cpp  CapabilitiesTests.h  ModelsTests.cpp  ModelsTests.h  SerializationTest.cpp  SerializationTests.cpp  SerializationTests.h  TestsMain.cpp
